Work on alda WH03

--- a/lectures/algos_data_structures/Exercise03.ipynb
+++ b/lectures/algos_data_structures/Exercise03.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -89,11 +89,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 5, 12, 14, 17, 18, 23, 26, 29, 31, 35, 36, 40, 45, 52, 53, 57, 59, 61, 71, 76, 80, 81, 82, 83, 85, 86, 96, 98]\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
+    "import sys\n",
     "\n",
     "def selectionsort(data):\n",
+    "    data = data[:]\n",
     "    for i in range (0,len(data)):\n",
     "        kleinstes = data[i]\n",
     "        for j in range (i, len(data)):\n",
@@ -106,6 +116,7 @@
     "    return data\n",
     "\n",
     "def insertionsort(data):\n",
+    "    data = data[:]\n",
     "    for i in range(1,len(data)):\n",
     "        currentvalue = data[i]\n",
     "        position = i\n",
@@ -116,6 +127,7 @@
     "    return data\n",
     "\n",
     "def bubblesort(data):\n",
+    "    data = data[:]\n",
     "    for i in range(0,len(data)-1):\n",
     "        for j in range(0,len(data)-1-i):\n",
     "            if data[j] >= data[j+1]:\n",
@@ -141,18 +153,110 @@
     "    pivotelement = [pivot]\n",
     "    return left + pivotelement + right \n",
     "    \n",
-    "def heapsort(data):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "class MaxHeap:\n",
+    "  def __init__(self, items=[]):\n",
+    "    super().__init__()\n",
+    "    self.heap = [0]\n",
+    "    for i in items:\n",
+    "      self.heap.append(i)\n",
+    "      self.__floatUp(len(self.heap) - 1)\n",
     "\n",
-    "def mergesort(data):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "  def push(self, data):\n",
+    "      self.heap.append(data)\n",
+    "      self.__floatUp(len(self.heap) - 1)\n",
+    "\n",
+    "  def peek(self):\n",
+    "    if self.heap[1]:\n",
+    "      return self.heap[1]\n",
+    "    else:\n",
+    "      return None\n",
+    "\n",
+    "  def pop(self):\n",
+    "    if len(self.heap) > 2: # more than one el in heap\n",
+    "      self.__swap(1, len(self.heap) - 1)\n",
+    "      max = self.heap.pop()\n",
+    "      self.__bubbleDown(1)\n",
+    "    elif len(self.heap) == 2: # only one element in heap\n",
+    "      max = self.heap.pop()\n",
+    "    else:\n",
+    "      max = None\n",
+    "    return max\n",
+    "\n",
+    "  def __swap(self, i, j):\n",
+    "    self.heap[i], self.heap[j] = self.heap[j], self.heap[i] # destructuring assignment :) nice learning\n",
+    "\n",
+    "  def __floatUp(self, index):\n",
+    "    parent = index // 2 # integer division\n",
+    "    if index <= 1:\n",
+    "      return\n",
+    "    elif self.heap[index] > self.heap[parent]:\n",
+    "      self.__swap(index, parent)\n",
+    "      self.__floatUp(parent) # recursion\n",
+    "\n",
+    "  def __bubbleDown(self, index): # also 'maxHeapify'\n",
+    "    left = index * 2\n",
+    "    right = index * 2 + 1\n",
+    "    largest = index\n",
+    "    # prevent out of bounds exception and check\n",
+    "    # if index el is not the largest among it's children, swap with the largest child\n",
+    "    if len(self.heap) > left and self.heap[left] > self.heap[largest]:\n",
+    "      largest = left\n",
+    "    if len(self.heap) > right and  self.heap[right] > self.heap[largest]:\n",
+    "      largest = right\n",
+    "    if largest != index:\n",
+    "      self.__swap(index, largest)\n",
+    "      self.__bubbleDown(largest)\n",
+    "\n",
+    "def heapsort(arr):\n",
+    "  res = []\n",
+    "  m = MaxHeap(arr)\n",
+    "  el = m.pop()\n",
+    "  while el != None:\n",
+    "    res.append(el)\n",
+    "    el = m.pop()\n",
+    "  return list(reversed(res))\n",
+    "\n",
+    "def _split(arr):\n",
+    "    return (arr[: len(arr) // 2], arr[len(arr) // 2 :])\n",
+    "\n",
+    "def _merge(left, right):\n",
+    "    leftIndex = 0\n",
+    "    rightIndex = 0\n",
+    "    \n",
+    "    result = []\n",
+    "    \n",
+    "    while leftIndex < len(left) and rightIndex < len(right):\n",
+    "        if left[leftIndex] <= right[rightIndex]:\n",
+    "            result.append(left[leftIndex])\n",
+    "            leftIndex += 1\n",
+    "        else:\n",
+    "            result.append(right[rightIndex])\n",
+    "            rightIndex += 1\n",
+    "    \n",
+    "    if leftIndex < len(left):\n",
+    "        result.extend(left[leftIndex:])\n",
+    "    elif rightIndex < len(right):\n",
+    "        result.extend(right[rightIndex:])\n",
+    "        \n",
+    "    return result\n",
+    "    \n",
+    "def mergesort(arr):\n",
+    "    if arr is None:\n",
+    "        return None\n",
+    "    \n",
+    "    if len(arr) < 2:\n",
+    "        return arr\n",
+    "    \n",
+    "    left, right = _split(arr)\n",
+    "    \n",
+    "    return _merge(mergesort(left), mergesort(right))\n",
+    "\n",
+    "print(mergesort(random.sample(range(100), 30)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -180,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -194,27 +298,14 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "selectionsort altered the original",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-aac1f048cc98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_algorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselectionsort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-03b62a4e4c59>\u001b[0m in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msample_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} did not sort the list\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0msample_list\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} altered the original\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: selectionsort altered the original"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_algorithm(selectionsort)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -228,27 +319,14 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "insertionsort altered the original",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c42301acb0d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_algorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsertionsort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-03b62a4e4c59>\u001b[0m in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msample_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} did not sort the list\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0msample_list\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} altered the original\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: insertionsort altered the original"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_algorithm(insertionsort)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -262,27 +340,14 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "bubblesort altered the original",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-0e4804a5fe9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_algorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbubblesort\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-03b62a4e4c59>\u001b[0m in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msample_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} did not sort the list\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0msample_list\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mSAMPLE_LIST\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"{} altered the original\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: bubblesort altered the original"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_algorithm(bubblesort)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -303,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -324,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -336,7 +401,8 @@
      "points": 4,
      "schema_version": 1,
      "solution": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -364,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -376,22 +442,47 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['rev.partial.1000.txt', 'seq.partial.1000.txt', 'identical.1000.txt', 'rand.no.dups.1000.txt', 'rev.saw.1000.txt', 'rev.ends.1000.txt', 'seq.saw.1000.txt', 'seq.0.is.1000.1000.txt', '1245.repeat.1000.txt', 'sequential.1000.txt', 'med.3.killer.1000.txt', 'rand.dups.1000.txt', 'rand.steps.1000.txt', 'end.0.1000.txt', 'reverse.1000.txt'])\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "from os import walk\n",
     "\n",
+    "x = 1000\n",
     "TEST_CASE_PATH = \"test_files\"\n",
     "\n",
+    "def file_len(path):\n",
+    "    with open(path) as f:\n",
+    "        for i, l in enumerate(f):\n",
+    "            pass\n",
+    "\n",
+    "    return i + 1\n",
+    "\n",
+    "\n",
     "def load_test_cases(path):\n",
+    "\n",
+    "    f = []\n",
+    "\n",
+    "    for (dirpath, dirnames, filenames) in walk(path):\n",
+    "        onlyXLines = [filename for filename in filenames if  file_len(dirpath + \"/\" + filename) == 1000]\n",
+    "        f.extend(onlyXLines)\n",
+    "        \n",
+    "        break\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    "
+    "    return dict((el,0) for el in f)\n",
+    "\n",
+    "print(load_test_cases(TEST_CASE_PATH).keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -405,7 +496,21 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Element counts were not equal:\n\nDiff is 1348 characters long. Set self.maxDiff to None to see it.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-2f809d51ef7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m                         'rev.ends', 'rev.partial', 'rev.saw', 'reverse', 'seq.0.is.1000', 'seq.partial', 'seq.saw', 'sequential']\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0munittest_test_case\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massertCountEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaded_test_cases\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mavailable_test_cases\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mloaded_test_cases\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/unittest/case.py\u001b[0m in \u001b[0;36massertCountEqual\u001b[0;34m(self, first, second, msg)\u001b[0m\n\u001b[1;32m   1181\u001b[0m             \u001b[0mstandardMsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_truncateMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstandardMsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiffMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1182\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_formatMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandardMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1183\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1184\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1185\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertMultiLineEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/unittest/case.py\u001b[0m in \u001b[0;36mfail\u001b[0;34m(self, msg)\u001b[0m\n\u001b[1;32m    668\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    669\u001b[0m         \u001b[0;34m\"\"\"Fail immediately, with the given message.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 670\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailureException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    671\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    672\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertFalse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Element counts were not equal:\n\nDiff is 1348 characters long. Set self.maxDiff to None to see it."
+     ]
+    }
+   ],
    "source": [
     "import unittest\n",
     "\n",
