--- a/lectures/algos_data_structures/Exercise04.ipynb
+++ b/lectures/algos_data_structures/Exercise04.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "NAME = \"Björn Steinorth\"\n",
-    "COLLABORATORS = \"\""
+    "COLLABORATORS = \"Jan Wirth\""
    ]
   },
   {
@@ -62,7 +62,118 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "\n",
+    "$T(n) = aT(n\\frac{n}{b}) + f(n)$\n",
+    "\n",
+    "\n",
+    "### (1)\n",
+    "$T(n) = T(\\frac{n}{2}) + n(2 − \\cos n)$\n",
+    "\n",
+    "$a = 1$ $b = 2$ $ f(n) = n(2 − \\cos n)$\n",
+    "\n",
+    "Master-Theorem nicht anwendbar, da $f(n)$ kein Polynomial ist.\n",
+    "\n",
+    "### (2)\n",
+    "$T(n) = 64T(\\frac{n}{8}) − n^2\\log(n)$\n",
+    "\n",
+    "$a = 64$ $b = 8$ $ f(n) = − n^2\\log(n)$\n",
+    "\n",
+    "Master-Theorem nicht anwendbar, da $log$ kein Polynomial ist.\n",
+    "\n",
+    "### (3)\n",
+    "$T(n) = 2^nT(\\frac{n}{2}) + n^n$\n",
+    "\n",
+    "$a = 2^n$ $b = 2$ $ f(n) = n^n$\n",
+    "\n",
+    "Master-Theorem nicht anwendbar, da $a$ keine Konstante ist.\n",
+    "\n",
+    "### (4)\n",
+    "$T(n) = 0.5T(\\frac{n}{2}) + 1/n$\n",
+    "\n",
+    "$a = \\frac{1}{2}, b = 2, f(n) = \\frac{1}{n}$\n",
+    "\n",
+    "**Fall 2**:\n",
+    "\n",
+    "$f(n) = \\theta(n^{log_b a})$\n",
+    "\n",
+    "$\\frac{1}{n} = \\theta(n^{-1})$\n",
+    "\n",
+    "$\\frac{1}{n} = \\theta(\\frac{1}{n})$\n",
+    "\n",
+    "$\\rightarrow T(n) = \\theta(\\frac{1}{n} * log(n))$\n",
+    "\n",
+    "\n",
+    "### (5)\n",
+    "$T (n) = 7T (\\frac{n}{3}) + n^2$\n",
+    "\n",
+    "$a = 7$ $b = 3$ $ f(n) = n^2$\n",
+    "\n",
+    "**Fall 3**\n",
+    "\n",
+    "$f(n) = \\Omega(n^{log_ba + \\epsilon})$\n",
+    "\n",
+    "$n^2 = \\Omega(n^{log_37 + \\epsilon})$\n",
+    "\n",
+    "$\\epsilon > 0$\n",
+    "\n",
+    "$\\exists \\epsilon \\in N : 2 = log_3 7 + \\epsilon$\n",
+    "\n",
+    "$\\rightarrow \\epsilon = 2 - log_3 7$\n",
+    "\n",
+    "**und**\n",
+    "\n",
+    "$7\\frac{n}{3}^2 \\leq c * n^2$ wenn $0 < c < 1$\n",
+    "\n",
+    "$7\\frac{n^2}{9} \\leq c * n^2$ \n",
+    "\n",
+    "$\\frac{7}{9} * n^2 \\leq c * n^2$ gilt für $c = \\frac{7}{9}$\n",
+    "\n",
+    "$\\rightarrow T(n) = \\theta(n^2)$\n",
+    "\n",
+    "### (6)\n",
+    "$T (n) = 16T (\\frac{n}{4}) + n!$\n",
+    "\n",
+    "$a = 16$ $b = 4$ $ f(n) = n!$\n",
+    "\n",
+    "** Fall 3 **\n",
+    "\n",
+    "$f(n) = \\Omega(n^{log_b a + \\epsilon})$ wenn $\\epsilon > 0$\n",
+    "\n",
+    "$n! = \\Omega(n^{2 + \\epsilon})$ und $\\epsilon = 1$\n",
+    "\n",
+    "$n! = \\Omega(n^3)$\n",
+    "\n",
+    "**und**\n",
+    "\n",
+    "$16 * \\frac{n}{4}! \\leq c * n!$ wenn $0 < c < 1$\n",
+    "\n",
+    "Ein solches c existiert nicht\n",
+    "\n",
+    "Mastertheorem nicht anwendbar\n",
+    "\n",
+    "\n",
+    "### (7)\n",
+    "\n",
+    "$T(n) = \\sqrt{2} T(\\frac{n}{2}) + \\log n$\n",
+    "\n",
+    "$a = \\sqrt{2}$ $b = 2$ $f(n) = \\log n$\n",
+    "\n",
+    "Mastertheorem nicht Anwendbar da $f(n)$ kein polynomial ist.\n",
+    "\n",
+    "\n",
+    "### (8)\n",
+    "\n",
+    "$T (n) = 2T (\\frac{n}{4}) + n^{0.51}$\n",
+    "\n",
+    "$a = 16$ $b = 4$ $ f(n) = n^{0.51}$\n",
+    "\n",
+    "$log_b a = log_4 2 = \\frac{1}{2}$\n",
+    "\n",
+    "$n^{0,51} \\in \\Omega(n^{\\frac{1}{2} + \\frac{1}{100}})$ mit $\\epsilon = \\frac{1}{100}$\n",
+    "\n",
+    "$2(\\frac{n}{4})^{0,51} \\leq c * n^{0,51}n^{0.51}$ mit  $c = 0,99$\n",
+    "\n",
+    "$T(n) \\in \\theta(n^{0,51})$"
    ]
   },
   {
@@ -187,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
